adapt project image

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -53,6 +53,23 @@
             }
         }
     }
+	.project-picture {
+        height: $project-img-size;
+        width: $project-img-size;
+        position: relative;
+        margin: -10px 0 0 15px;
+        float: left;
+        border-radius: 10%;
+        p & {
+            padding: 0;
+            margin: 0;
+        }
+        @media (max-width: $small-width) {
+            img {
+                margin-top: -5px;
+            }
+        }
+    }
     img {
         text-align: center;
         width: 100%;
