change project img

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -54,8 +54,8 @@
         }
     }
 	.project-picture {
-        height: $image-size;
-        width: $image-size;
+        height: $projectimg-size;
+        width: $projectimg-size;
         position: relative;
         margin: -10px 15px 0 0;
         float: left;
