--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -54,7 +54,7 @@
         }
     }
 	.project-picture {
-        height: $projectimg-size;
+        //height: $projectimg-size;
         width: $projectimg-size;
         position: relative;
         margin: 0px 30px 0 0;
