--- a/css/sticky-footer.css
+++ b/css/sticky-footer.css
@@ -6,6 +6,8 @@ html {
 }
 body {
   margin-bottom: 60px; /* Margin bottom by footer height */
+  font-family: "consolas";
+  height: 100%;
 }
 .footer {
   position: absolute;
@@ -23,6 +25,6 @@ body {
 
 .container {
   width: auto;
-  max-width: 680px;
+  max-width: 800px;
   padding: 0 15px;
 }
